# improved-octo-waffle

./: .clang-format  .gitignore  .ycm_extra_conf.py  README.md  meson.build
src/: '  camera.h  collision.cpp  collision.h  components.cpp  components.h  defaulttilemap.h  defualtdebugtexture.h  directions.h  ecs.cpp  ecs.h  extrastate.cpp  extrastate.h  gameconfig.cpp  gameconfig.h  gameinput.cpp  gameinput.h  graph.h  graphics.cpp  graphics.h  input.cpp  input.h  internalgameevents.h  logger.cpp  logger.h  main.cpp  packedvector.cpp  packedvector.h  parsegamekeys.cpp  parsegamekeys.h  parseinternalgameevents.cpp  parseinternalgameevents.h  pathfinding.cpp  pathfinding.h  position.h  resourcemanager.cpp  resourcemanager.h  steeringbehaviour.h  systems.h  texturemanager.cpp  (+7 more)
tests/: graphtests.cpp  main-tests.cpp  packedvectortests.cpp  smallmain.cpp  tilemaptests.cpp
